fix(daemonset): update daemonset node selectors

--- a/deployments/helm/nvidia-device-plugin/templates/daemonset.yml
+++ b/deployments/helm/nvidia-device-plugin/templates/daemonset.yml
@@ -94,6 +94,7 @@ spec:
           - name: config
             mountPath: /config
       {{- end }}
+      runtimeClassName: nvidia
       containers:
       {{- if eq $hasConfigMap "true" }}
       - image: {{ include "nvidia-device-plugin.fullimage" . }}
@@ -203,17 +204,11 @@ spec:
           emptyDir: {}
         {{- end }}
       {{- $nodeSelector := .Values.nodeSelector }}
-      {{- if and (empty $nodeSelector) .Subcharts.gfd }}
-      {{- $nodeSelector = .Subcharts.gfd.Values.nodeSelector }}
-      {{- end }}
       {{- with $nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- $affinity := .Values.affinity }}
-      {{- if and (empty $affinity) .Subcharts.gfd }}
-      {{- $affinity = .Subcharts.gfd.Values.affinity }}
-      {{- end }}
       {{- with $affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
